# esp

./: .gitignore  Cargo.toml  flake.nix  partition-table.csv  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: base36.rs  http_server.rs  main.rs  mdns.rs  uart.rs  wifi.rs
