[package]
name = "esp"
version = "0.1.0"
authors = ["Guillaume Fournier <me@guif.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.4" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
am03127 = { git = "https://github.com/giomf/AM03127.git", branch = "main" , features = ["serde"] }
anyhow = "1.0.93"
embedded-svc = "0.28.0"
serde_json = "1.0.133"
serde = "1.0.219"
heapless = "0.8.0"
thiserror = "2.0.12"

[build-dependencies]
embuild = "0.33.0"
